hphp/test/quick/raise_array_index_notice.php.expectf
0
1
2
3
Caught the rain
0
1
2
3

Fatal error: Uncaught exception 'Exception' with message '' in %s/test/quick/raise_array_index_notice.php:5
Stack trace:
#0 %s/test/quick/raise_array_index_notice.php(16): errorHandler(8, 'Undefined index: 4', '%s/test/quick/raise_array_index_notice.php', 16)
#1 %s/test/quick/raise_array_index_notice.php(26): rain()
#2 %s/test/quick/raise_array_index_notice.php(30): main()
#3 {main}